(feat/integrations-tests) feat: Added Integrations tests